[gd_scene load_steps=2 format=3 uid="uid://dvsgx0511k20y"]

[ext_resource type="Script" uid="uid://bih0taeuh4dyc" path="res://Framework/Clases/Global/game_manager.gd" id="1_d7uf6"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_d7uf6")

[node name="TemporizadorOleada" type="Timer" parent="."]

[connection signal="timeout" from="TemporizadorOleada" to="." method="_on_temporizador_oleada_timeout"]
